--- a/src/tienda/templates/ventas.html
+++ b/src/tienda/templates/ventas.html
@@ -63,6 +63,7 @@
                                     <td>{{ venta.estado }}</td>
                                     <td>
 
+                                            <a button class="btn btn-primary btn-xs" href="/tienda/ventas/{{ venta.nro_factura }}">Detalle</a>
                                             <a button class="btn btn-danger btn-xs" data-toggle="modal"
                                                data-target="#eliminar-modal" onclick="formEliminar({{ venta.id }})">Cancelar</a>
 
