--- a/src/tienda/templates/cabecera-venta.html
+++ b/src/tienda/templates/cabecera-venta.html
@@ -101,13 +101,15 @@
         {% include "forms/integerfield.html" with field=form.total_iva_10 %}
         {% include "forms/field-errors.html" with field=form.total_iva_10 %}
     </div>
-
     <!-- IVA 5 total -->
     <div class="form-group col-md-2 col-sm-2 col-xs-12">
         {% include "forms/label.html" with field=form.total_iva_5 %}
         {% include "forms/integerfield.html" with field=form.total_iva_5 %}
         {% include "forms/field-errors.html" with field=form.total_iva_5 %}
     </div>
+    {{ form.total_grav_5.as_hidden }}
+    {{ form.total_grav_10.as_hidden }}
+    {{ form.total_grav_exentas.as_hidden }}
 
     <!-- EXENTAS total -->
 {#    <div class="form-group col-md-2 col-sm-2 col-xs-12">#}
