Reporte de ingresos egresos y ganancia por mes

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -60,11 +60,6 @@
                     <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/tienda/caja">Caja chica</a></li>
-                        <li><a href="/tienda/compras">Gastos</a></li>
-                        <li><a href="/tienda/compras">Ingresos</a></li>
-                        <li><a href="/tienda/compras">Balance</a></li>
-                        {#                       <li><a href="#">cuentas a cobrar</a></li>#}
-                        {#                        <li><a href="#">cuentas a pagar</a></li>#}
                     </ul>
                 </li>
                 <li><a><img src="/static/img/reportes_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
@@ -76,6 +71,7 @@
                         <li><a href="#">Total alumnos</a></li>
                         <li><a href="#">Cuotas por vencer</a></li>
                         <li><a href="#">Asistencias </a></li>
+                        <li><a href="/reportes/finanzas">Balance</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
