--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -40,9 +40,10 @@
                 <link href="/static/autocomplete_light/select2.css" rel="stylesheet">
                 <link href="/static/vendors/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css" rel="stylesheet">
                 <link href="/static/vendors/clockpicker/bootstrap-clockpicker.min.css" rel="stylesheet">
-                <link href="/static/vendors/fullcalendar/fullcalendar.css" rel="stylesheet">
-                <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar-scheduler/1.9.4/scheduler.css" rel="stylesheet">
+{#                <link href="/static/vendors/fullcalendar/fullcalendar.css" rel="stylesheet">#}
+{#                <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar-scheduler/1.9.4/scheduler.css" rel="stylesheet">#}
                 <link href="/static/vendors/BLOKKNeue-Regular/blokkfont.css" rel="stylesheet">
+                <link href="/static/vendors/bootstrap-datepicker/bootstrap-datepicker.min.css" rel="stylesheet">
                 <link rel="shortcut icon" type="image/png" href="/static/img/logo_negro.png">
             {% endblock stylesheets %}
 
@@ -85,7 +86,7 @@
                             {% include "footer.html" %}
                         </footer>
                     {% endblock footer %}
-                 /*agrega large modal*/
+                    <!-- agrega large modal -->
                     <div class="modal fade " id="ayuda" tabindex="-1" role="dialog"
                          aria-labelledby="myLargeModalLabel">
                         <div class="modal-dialog modal-lg" role="document">
@@ -159,8 +160,12 @@
                 <script src="/static/vendors/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js"></script>
                 <script src="/static/vendors/clockpicker/bootstrap-clockpicker.min.js"></script>
                 <script src="/static/vendors/fullcalendar/moment.min.js"></script>
-                <script src="/static/vendors/fullcalendar/fullcalendar.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar-scheduler/1.9.4/scheduler.min.js"></script>
+{#                <script src="/static/vendors/fullcalendar/fullcalendar.js"></script>#}
+                <script src="/static/vendors/autonumeric/autonumeric.min.js"></script>
+                <script src="/static/vendors/chartjs/chartjs.min.js"></script>
+                <script src="/static/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+                <script src="/static/vendors/bootstrap-datepicker/bootstrap-datepicker.es.min.js"></script>
+{#                <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar-scheduler/1.9.4/scheduler.min.js"></script>#}
             {% endblock %}
             <!-- Custom Theme Scripts -->
             <script src="/static/build/js/custom.js"></script>
