--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -71,7 +71,7 @@
                         <li><a href="#">Total alumnos</a></li>
                         <li><a href="#">Cuotas por vencer</a></li>
                         <li><a href="#">Asistencias </a></li>
-                        <li><a href="/reportes/finanzas">Balance</a></li>
+                        <li><a href="/reportes/balance">Balance</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
