--- a/src/reportes/templates/balance.html
+++ b/src/reportes/templates/balance.html
@@ -20,9 +20,10 @@
 
 
                     <div class="x_content">
-                        <form method="GET" action="/reportes/finanzas" class="form-inline">
+                        <form method="GET" action="/reportes/balance" class="form-inline">
                             <input name="mes" class="form-control" type="text" required value="{{ mes }}">
-                            <input type="submit" class="btn btn-primary" value="Ver">
+                            <input type="submit" name="action" class="btn btn-primary" value="Ver">
+                            <input type="submit" name="action" class="btn btn-success" value="Excel">
                         </form>
                         <div class="row tile_count">
                             <div class="col-md-4 col-sm-4 col-xs-4 tile_stats_count text-center">
