--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -70,7 +70,7 @@
                         <li><a href="#">Total ganancias</a></li>
                         <li><a href="#">Total alumnos</a></li>
                         <li><a href="#">Cuotas por vencer</a></li>
-                        <li><a href="#">Asistencias </a></li>
+                        <li><a href="/reportes/asistencia">Asistencias </a></li>
                         <li><a href="/reportes/balance">Balance</a></li>
                     </ul>
                 </li>
