--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -163,6 +163,7 @@
 {#                <script src="/static/vendors/fullcalendar/fullcalendar.js"></script>#}
                 <script src="/static/vendors/autonumeric/autonumeric.min.js"></script>
                 <script src="/static/vendors/chartjs/chartjs.min.js"></script>
+                <script src="/static/vendors/chartjs/chartjs-datalabels.min.js"></script>
                 <script src="/static/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
                 <script src="/static/vendors/bootstrap-datepicker/bootstrap-datepicker.es.min.js"></script>
 {#                <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar-scheduler/1.9.4/scheduler.min.js"></script>#}
