-Agrega gravadas en CompraCabecera -Mejora vista de Egresos y Venta

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -60,6 +60,7 @@
                     <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/tienda/caja">Caja chica</a></li>
+                        <li><a href="/tienda/compras">Egresos</a></li>
                     </ul>
                 </li>
                 <li><a><img src="/static/img/reportes_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
