--- a/src/tienda/templates/compras-form.html
+++ b/src/tienda/templates/compras-form.html
@@ -158,6 +158,12 @@
             $('#id_monto_total').val(suma_exentas + suma_5 + suma_10);
             $('#subtotal-monto-exentas').text(suma_exentas);
             $('#subtotal-monto-5').text(suma_5);
+
+            $('#id_total_grav_5').val(suma_5);
+            $('#id_total_grav_10').val(suma_10);
+            $('#id_total_grav_exentas').val(suma_exentas);
+
+
             $('#subtotal-monto-10').text(suma_10);
             $('#id_total_iva_10').val(Math.round(suma_10 / 11));
             $('#id_total_iva_5').val(Math.round(suma_5 / 21));
